# Tracks

./: .clang-tidy  .gitignore  Android.mk  CMakeLists.txt  README.md  build.ps1  copy.ps1  copy.sh  log.txt  mod.json  mod.template.json  qpm.json  qpm.shared.json  qpm_defines.cmake
.github/workflows/: build-ndk.yml  publish.yml
include/: THooks.h  TLogger.h
include/Animation/: Events.h
shared/: AssociatedData.h  Hash.h  Json.h  StaticHolders.hpp  TLogger.h  TimeSourceHelper.h  Vector.h  bindings.h
shared/Animation/: Animation.h  Easings.h  GameObjectTrackController.hpp  PointDefinition.h  PointDefinitionInterpolation.h  Track.h
shared/sv/: small_vector.h
src/: AssociatedData.cpp  THooks.cpp  TimeSourceHelper.cpp  main.cpp
src/Animation/: Animation.cpp  Easings.cpp  Events.cpp  GameObjectTrackController.cpp  PointDefinition.cpp  PointDefinitionInterpolation.cpp  Track.cpp
src/Hooks/: BaseProviderHooks.cpp  BeatmapDataLoader.cpp  BeatmapDataTransformHelper.cpp  BeatmapObjectCallbackController.cpp  StandardLevelScenesTransitionSetupDataSO.cpp  UnitySceneChange.cpp
tracks_rs_link/: Cargo.toml  build.rs
tracks_rs_link/.cargo/: config.toml
tracks_rs_link/src/: lib.rs
