[package]
name = "tracks_rs_link"
version = "0.1.0"
edition = "2024"

[dependencies]
android_logger = "0.15.0"
ctor = "0.4.1"
log = "0.4.27"
# todo: use version
tracks_rs = { git = "https://github.com/Futuremappermydud/tracks-rs.git", branch = "tracks", features = [
    "ffi",
] }

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = { version = "0.28.0", default-features = false }

[profile.release]
lto = "fat"
opt-level = 3
strip = "none"
